--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,24 @@
 name: build_license_collector
 description: Collects licenses from your dependencies with build_runner
-version: 1.0.0
+version: 1.0.1
 repository: https://github.com/simolus3/build_license_collector
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=3.6.0 <4.0.0'
 
 dependencies:
   build: ^1.6.0
-  build_test: ^1.2.2
-  dart_style: ^1.3.7
-  glob: ^1.2.0
-  graphs: ^0.2.0
-  pubspec_parse: ^0.1.5
+  build_test: ^2.2.3
+  dart_style: ^3.0.1
+  glob: ^2.1.3
+  graphs: ^2.3.0
+  pub_semver: ^2.1.5
+  pubspec_parse: ^1.5.0
 
 dev_dependencies:
-  extra_pedantic: ^1.2.0
+  lints: ^5.1.1
   test: ^1.14.4
-  build_runner: ^1.10.3
+  build_runner: ^2.4.14
 
 dependency_overrides:
   build:
