--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: build_license_collector
 description: Collects licenses from your dependencies with build_runner
-version: 1.0.2
+version: 1.0.4
 repository: https://github.com/simolus3/build_license_collector
 
 environment:
   sdk: '>=3.6.0 <4.0.0'
 
 dependencies:
-  build: ^2.4.0
+  build: ^3.0.0
   dart_style: ^3.0.1
   glob: ^2.1.3
   graphs: ^2.3.0
@@ -15,7 +15,10 @@ dependencies:
   pubspec_parse: ^1.5.0
 
 dev_dependencies:
-  lints: ^5.1.1
+  lints: ^6.0.0
   test: ^1.14.4
   build_runner: ^2.4.14
-  build_test: ^2.2.3
+  build_test: ^3.3.0
+  simons_pub_uploader:
+    hosted: https://pub-simonbinder-eu.fsn1.your-objectstorage.com
+    version: ^1.2.0
