--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: build_license_collector
 description: Collects licenses from your dependencies with build_runner
-version: 1.0.6
+version: 2.0.0
 repository: https://github.com/simolus3/build_license_collector
 
 environment:
@@ -8,17 +8,14 @@ environment:
 
 dependencies:
   build: ^4.0.0
-  dart_style: ^3.0.1
+  build_modules: ^5.0.18
+  cli_util: ^0.4.2
   glob: ^2.1.3
-  graphs: ^2.3.0
-  pub_semver: ^2.1.5
-  pubspec_parse: ^1.5.0
+  graphs: ^2.3.2
+  path: ^1.9.1
 
 dev_dependencies:
   lints: ^6.0.0
   test: ^1.14.4
   build_runner: ^2.4.14
   build_test: ^3.3.0
-  simons_pub_uploader:
-    hosted: https://pub-simonbinder-eu.fsn1.your-objectstorage.com
-    version: ^1.2.0
